# SPARQ

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DataHandler.cpp  DataHandler.hpp  FORMAT.md  README.md
.github/workflows/: build_sparq_linux.yaml  build_sparq_windows.yaml
dependencies/: CMakeLists.txt
src/: Assertions.h  AssetHolder.cpp  AssetHolder.hpp  CMakeLists.txt  ConfigHandler.cpp  ConfigHandler.hpp  ConnectionWindow.cpp  ConnectionWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  DataHandler.cpp  DataHandler.hpp  DataWindow.cpp  DataWindow.hpp  Datasets.hpp  DebugWindow.cpp  DebugWindow.hpp  IconsFontAwesome6.h  ImGuiNotify.hpp  Install.cmake  Makefile  MeasureWindow.cpp  MeasureWindow.hpp  PlottingWindow.cpp  PlottingWindow.hpp  README.md  SPARQ.APS  SPARQ.rc  SPARQ.res  SettingsWindow.cpp  SettingsWindow.hpp  StatisticsWindow.cpp  StatisticsWindow.hpp  ViewWindow.cpp  ViewWindow.hpp  Window.hpp  config.ini  fa-solid-900.h  imgui.ini  main.cpp  (+8 more)
src/cpp-serial-lin/src/: serial.cpp  serial.hpp
src/default-configs/: config.ini  imgui.ini
src/imgui/: imconfig.h  imgui.h
src/imgui-sfml/: imgui-SFML.cpp
src/windows/: CMakeLists.txt  ConnectionWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  DataWindow.cpp  DataWindow.hpp  DebugWindow.cpp  DebugWindow.hpp  MeasureWindow.cpp  MeasureWindow.hpp  PlottingWindow.cpp  PlottingWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp  StatisticsWindow.cpp  StatisticsWindow.hpp  ViewWindow.cpp  ViewWindow.hpp  Window.hpp
src/windows/plotting/: CMakeLists.txt  HeatmapPlottingWindow.hpp  PlotSettings.hpp  PlottingWindow.cpp  PlottingWindow.hpp  TimeseriesPlottingWindow.hpp
